--- a/JavaScript Exercises in CSharp/JavaScript Exercises in CSharp.csproj
+++ b/JavaScript Exercises in CSharp/JavaScript Exercises in CSharp.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Button.cs" />
     <Compile Include="EqualityComparisons.cs" />
     <Compile Include="Food.cs" />
     <Compile Include="Program.cs" />
