--- a/JavaScript Exercises in CSharp/JavaScript Exercises in CSharp.csproj
+++ b/JavaScript Exercises in CSharp/JavaScript Exercises in CSharp.csproj
@@ -49,6 +49,7 @@
     <Compile Include="HackerRankExercises.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RazorTutorial.cs" />
     <Compile Include="UdemyTutorial-Begin.cs" />
   </ItemGroup>
   <ItemGroup>
